--- a/my-portfolio-react/.gitignore
+++ b/my-portfolio-react/.gitignore
@@ -7,11 +7,14 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+api.js
+
 node_modules
 dist
 dist-ssr
 *.local
-api
+
+
 
 # Editor directories and files
 .vscode/*
